tests/idris2/basic033/expected
1/1: Building unboundimps (unboundimps.idr)
Error: While processing type of len'. Undefined name xs. 

unboundimps.idr:18:11--18:13
    |
 18 | len': Env xs -> Nat
    |           ^^

Error: While processing type of append'. Undefined name n. 

unboundimps.idr:19:16--19:17
    |
 19 | append' : Vect n a -> Vect m a -> Vect (n + m) a
    |                ^

